# slam_karto

./: CMakeLists.txt  package.xml
CMakeModules/: FindG2O.cmake
calibration/: closed_form_calibration.cpp  edge_se2_pure_calib.cpp  gm2dl_io.cpp  sclam_helpers.cpp  sclam_pure_calibration.cpp  sclam_register_types.cpp  types_sclam2d.cpp
include/slam_karto/: slam_karto_solver.h  slam_solver.h  solver_factory.h  spa_solver.h
include/slam_karto/g2o/: g2o_solver.h  vertigo_maxmix_solver.h  vertigo_switchable_solver.h
include/slam_karto/g2o/calibration/: types_sclam2d.h
include/slam_karto/g2o/types/data/: robot_laser_sclam.h
src/: g2o_solver.cpp  g2o_solver.h  slam_karto.cpp  spa_solver.cpp  vertigo_maxmix_solver.cpp  vertigo_switchable_solver.cpp  vertigo_switchable_solver.h
src/g2o/: g2o_solver.cpp  vertigo_maxmix_solver.cpp  vertigo_switchable_solver.cpp
src/g2o/types/data/: robot_laser_sclam.cpp
